tests/failures/todo_while_version/invalid_version.stderr
error: cannot find macro `todo_while_version` in this scope
 --> tests/failures/todo_while_version/invalid_version.rs:4:5
  |
4 |     todo_while_version!("2024/01/01");
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `todo_by::todo_while`
 --> tests/failures/todo_while_version/invalid_version.rs:1:5
  |
1 | use todo_by::todo_while;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
