tests/failures/todo_while_version/invalid_version.rs
use todo_by::todo_while;

fn main() {
    todo_while_version!("2024/01/01");
}
